--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,12 @@ dependencies:
   flutter_triple: ^1.2.4+3
   dio: ^4.0.0
   flutter_svg: ^0.22.0
-  cached_network_image: ^3.1.0
+  cached_network_image: ^3.2.1
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   connectivity: ^3.0.6
   diacritic: ^0.1.3
+  platform: ^3.1.0
   
 dev_dependencies:
   flutter_test:
